Fiz o método detectScreenSize() para atualizar o displayedColumns e não mostrar todaas as tabelas quando a tela estiver menor

--- a/src/color-palette.scss
+++ b/src/color-palette.scss
@@ -4,7 +4,8 @@ $custom-primary-color: (
   200 : #e5e5e5,
   300 : #cccccc,
   400 : #b3b3b3,
-  500 : #333333,
+  //500 : #333333,
+  500 : #7f7f7f,
   600 : #7f7f7f,
   700 : #666666,
   800 : #4c4c4c,
