--- a/src/app/components/people-list/people-list.component.html
+++ b/src/app/components/people-list/people-list.component.html
@@ -1,26 +1,34 @@
 <mat-table [dataSource]="people">
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef> Nome</mat-header-cell>
-    <mat-cell *matCellDef="let person"> {{person.name}} </mat-cell>
+    <mat-header-cell *matHeaderCellDef
+                     [ngClass]="{
+                     'mat-headline-1': isDesktopScreen,
+                     'mat-body-1' : isTabletScreen}"> Nome
+    </mat-header-cell>
+    <mat-cell *matCellDef="let person"
+              [ngClass]="{
+              'mat-subtitle-1': isDesktopScreen,
+              'mat-body-1' : isTabletScreen }"> {{person.name}} </mat-cell>
   </ng-container>
 
-  <ng-container matColumnDef="birthdate">
-    <mat-header-cell *matHeaderCellDef> Data de Nascimento</mat-header-cell>
-    <mat-cell *matCellDef="let person"> {{person.birthdate}} </mat-cell>
+  <ng-container matColumnDef="birthDate">
+    <mat-header-cell *matHeaderCellDef
+                     [ngClass]="{
+                     'mat-headline-1': isDesktopScreen,
+                     'mat-body-1' : isTabletScreen}"> Data de Nascimento
+    </mat-header-cell>
+    <mat-cell *matCellDef="let person"
+              [ngClass]="{
+              'mat-subtitle-1': isDesktopScreen,
+              'mat-body-1' : isTabletScreen }"> {{person.birthdate}} </mat-cell>
   </ng-container>
 
-  <ng-container matcolumndef="addresses">
-    <mat-header-cell *matHeaderCellDef> Endereços</mat-header-cell>
-    <mat-cell *matCellDef="let person">
-      <mat-list>
-        <mat-list-item *ngFor="let address of person.addresses">
-          {{address.street}}, {{address.number}} - {{address.city}}/{{address.state}}
-        </mat-list-item>
-      </mat-list>
-    </mat-cell>
+  <ng-container matColumnDef="addresses">
+    <mat-header-cell *matHeaderCellDef class="mat-headline-1">Endereço</mat-header-cell>
+    <mat-cell *matCellDef="let person"
+              class="mat-subtitle-1"> {{ person.addresses[0].street + ', ' + person.addresses[0].number }} </mat-cell>
   </ng-container>
 
-  <!-- Actions Column -->
   <ng-container matColumnDef="actions">
     <mat-header-cell *matHeaderCellDef class="action-column">
       <button
