--- a/src/app/components/people-table/people-table.component.html
+++ b/src/app/components/people-table/people-table.component.html
@@ -1,18 +1,19 @@
-<!--<mat-card>-->
-<!--  <mat-toolbar color="primary">Cursos Disponíveis</mat-toolbar>-->
+<mat-card>
+  <mat-toolbar color="primary">
+    <span class="mat-subtitle-1">Dados de pessoas</span>
+  </mat-toolbar>
+  <div class="example-container mat-elevation-z8">
+    <app-people-list
+      *ngIf="people$ | async as people"
+      [people]="people"
+      (add)="onAdd()"
+      (edit)="onEdit($event)"
+    ></app-people-list>
 
-<!--  <div class="example-container mat-elevation-z8">-->
-<!--    <app-people-list-->
-<!--      *ngIf="people$ | async as people"-->
-<!--      [people]="people"-->
-<!--      (add)="onAdd()"-->
-<!--      (edit)="onEdit($event)"-->
-<!--    ></app-people-list>-->
-
-<!--    <ng-template #loading>-->
-<!--      <div class="loading-spinner">-->
-<!--        <mat-spinner></mat-spinner>-->
-<!--      </div>-->
-<!--    </ng-template>-->
-<!--  </div>-->
-<!--</mat-card>-->
+    <ng-template #loading>
+      <div class="loading-spinner">
+        <mat-spinner></mat-spinner>
+      </div>
+    </ng-template>
+  </div>
+</mat-card>
