--- a/src/app/components/people-form/people-form.component.html
+++ b/src/app/components/people-form/people-form.component.html
@@ -1,1 +1,30 @@
-<p>people-form works!</p>
+<mat-card>
+  <mat-toolbar color="primary">
+    <span class="mat-subtitle-1">Detalhe do cadastro</span>
+  </mat-toolbar>
+
+  <mat-card-content>
+    <form [formGroup]="form" class="min-width">
+      <mat-form-field class="full-width" appearance="outline">
+        <input matInput placeholder="Nome" formControlName="name" #name/>
+        <mat-hint align="end">{{name.value!.length || 0}}/100</mat-hint>
+        <mat-error *ngIf="form.get('name')?.invalid">{{getErrorMessage('name')}}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field class="full-width" appearance="outline">
+        <input matInput placeholder="Data de Nascimento" formControlName="birthdate" #birthdate/>
+        <mat-hint align="end">{{birthdate.value}}</mat-hint>
+        <mat-error *ngIf="form.get('birthdate')?.invalid">{{getErrorMessage('birthdate')}}</mat-error>
+      </mat-form-field>
+    </form>
+  </mat-card-content>
+
+  <mat-card-actions class="actions-center">
+    <button mat-raised-button class="bg-green-500 hover:bg-green-700" (click)="onSubmit()">
+      Salvar
+    </button>
+    <button mat-raised-button color="warn" (click)="onCancel()" class="btn-space">
+      Cancelar
+    </button>
+  </mat-card-actions>
+</mat-card>
