--- a/src/common.scss
+++ b/src/common.scss
@@ -2,15 +2,10 @@
 @use '@angular/material' as mat;
 @use "color-palette";
 @import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans&display=swap');
 
 // Importa as fontes extras para o projeto
 @font-face {
   font-family: 'Nunito', sans-serif;
-}
-
-@font-face {
-  font-family: 'Open Sans', sans-serif;
 }
 
 // Define a tipografia padrão do projeto
@@ -20,12 +15,12 @@ $crudAngular-typography: mat.define-typography-config(
   $headline-4: mat.define-typography-level(45px, 52px, 400, 'Nunito' ,$letter-spacing: -0em),
   $headline-3: mat.define-typography-level(34px, 40px, 400, 'Nunito'),
   $headline-2: mat.define-typography-level(30px, 40px, 700, 'Nunito'),
-  $headline-1: mat.define-typography-level(26px, 34px, 700, 'Nunito'),
+  $headline-1: mat.define-typography-level(20px, 34px, 700, 'Nunito'),
   $subtitle-1: mat.define-typography-level(20px, 34px, 400, 'Nunito'),
-  $body-2: mat.define-typography-level(16px, 18px, 700, 'OpenSans'),
-  $body-1: mat.define-typography-level(14px, 18px, 400, 'OpenSans'),
+  $body-2: mat.define-typography-level(16px, 18px, 400, 'Nunito'),
+  $body-1: mat.define-typography-level(14px, 18px, 400, 'Nunito'),
   $caption: mat.define-typography-level(14px, 18px, 400),
-  $button: mat.define-typography-level(14px, 34px, 700, 'OpenSans'),
+  $button: mat.define-typography-level(14px, 34px, 700, 'Nunito'),
 );
 
 // Adiciona uma nova cor ao tema - Success
